chore : upgrade to spring boot version 4.0 (#136)
* refactor: migrate from javax to jakarta XML bindings to address EOL eclipse jakarta

* refactor: update dependencies and fix content type in tests

* refactor: remove deprecated javax.xml.bind and javax.xml.ws mappings in jakarta-renames.properties

* changes by openrewrite recipe - spring upgrade

* refactor: update Jackson module references to use 'tools.jackson' namespace and pom file updates

* refactor: fixed tests in xml model api module

* refactor: fixed tests in model api and juel modules

* refactor: fixed tests in dmn module

* refactor: fixed tests in engine-dmn module

* refactor: fixed tests in commons module

* refactor: fixed tests in engine module

* refactor: fixed tests in engine module

* refactor: fixed tests in engine-spring-6 module

* refactor: fixed tests in engine-spin-core module

* refactor: fixed tests in engine-plugin-spin module

* refactor: fixed tests in http-client module

* refactor: fixed tests in http-client module

* refactor: fixed tests in fluxnova-bpm-assert module

* refactor: fixed compilation issue in spring-boot-starter module

* refactor : fix junit inconsistent version issue

* refactor: fixed compilation errors in engine-rest module

* refactor: fixed tests in engine-rest jakarta

* refactor: fixed compilation errors and tests in spring-boot-starter-rest module

* refactoring: build fixes for Webapp - Assembly Jakarta module

* refactor: fixed compilation errors and tests in spring-boot-starter-rest-core module

* refactor: fixed tests in spring-boot-starter-webapp-core and spring-boot-starter-webapp module

* refactor: fixed tests in spring-boot-starter-security module

* refactor: fixed issues in spin-dataformat-all module

* refactor: fixed some issues in fluxnova-engine-cdi-jakarta module

* test fixes for engine-cdi jakarta module

* test fixes for plugins identity-ldap module

* refactor: fix external-task-client unit tests

* refactor: fix jackson conflicts in 