@@ -1216,8 +1216,7 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
     if (deserializationTypeValidator == null) {
       deserializationTypeValidator = new DefaultDeserializationTypeValidator();
     }
-    if (deserializationTypeValidator instanceof WhitelistingDeserializationTypeValidator) {
-      WhitelistingDeserializationTypeValidator validator = (WhitelistingDeserializationTypeValidator) deserializationTypeValidator;
+    if (deserializationTypeValidator instanceof WhitelistingDeserializationTypeValidator validator) {
       validator.setAllowedClasses(deserializationAllowedClasses);
       validator.setAllowedPackages(deserializationAllowedPackages);
     }
@@ -1237,7 +1236,7 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
       !HISTORY_REMOVAL_TIME_STRATEGY_END.equals(historyRemovalTimeStrategy) &&
       !HISTORY_REMOVAL_TIME_STRATEGY_NONE.equals(historyRemovalTimeStrategy)) {
       throw LOG.invalidPropertyValue("historyRemovalTimeStrategy", String.valueOf(historyRemovalTimeStrategy),
-        String.format("history removal time strategy must be set to '%s', '%s' or '%s'", HISTORY_REMOVAL_TIME_STRATEGY_START, HISTORY_REMOVAL_TIME_STRATEGY_END, HISTORY_REMOVAL_TIME_STRATEGY_NONE));
+        "history removal time strategy must be set to '%s', '%s' or '%s'".formatted(HISTORY_REMOVAL_TIME_STRATEGY_START, HISTORY_REMOVAL_TIME_STRATEGY_END, HISTORY_REMOVAL_TIME_STRATEGY_NONE));
     }
   }
 
@@ -1253,7 +1252,7 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
     //validate number of threads
     if (historyCleanupDegreeOfParallelism < 1 || historyCleanupDegreeOfParallelism > MAX_THREADS_NUMBER) {
       throw LOG.invalidPropertyValue("historyCleanupDegreeOfParallelism", String.valueOf(historyCleanupDegreeOfParallelism),
-        String.format("value for number of threads for history cleanup should be between 1 and %s", HistoryCleanupCmd.MAX_THREADS_NUMBER));
+        "value for number of threads for history cleanup should be between 1 and %s".formatted(HistoryCleanupCmd.MAX_THREADS_NUMBER));
     }
 
     if (historyCleanupBatchWindowStartTime != null) {
@@ -1268,7 +1267,7 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
 
     if (historyCleanupBatchSize > HistoryCleanupHandler.MAX_BATCH_SIZE || historyCleanupBatchSize <= 0) {
       throw LOG.invalidPropertyValue("historyCleanupBatchSize", String.valueOf(historyCleanupBatchSize),
-          String.format("value for batch size should be between 1 and %s", HistoryCleanupHandler.MAX_BATCH_SIZE));
+        "value for batch size should be between 1 and %s".formatted(HistoryCleanupHandler.MAX_BATCH_SIZE));
     }
 
     if (historyCleanupBatchThreshold < 0) {
@@ -1293,13 +1292,13 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
     if (!HISTORY_CLEANUP_STRATEGY_REMOVAL_TIME_BASED.equals(historyCleanupStrategy) &&
       !HISTORY_CLEANUP_STRATEGY_END_TIME_BASED.equals(historyCleanupStrategy)) {
       throw LOG.invalidPropertyValue("historyCleanupStrategy", String.valueOf(historyCleanupStrategy),
-        String.format("history cleanup strategy must be either set to '%s' or '%s'", HISTORY_CLEANUP_STRATEGY_REMOVAL_TIME_BASED, HISTORY_CLEANUP_STRATEGY_END_TIME_BASED));
+        "history cleanup strategy must be either set to '%s' or '%s'".formatted(HISTORY_CLEANUP_STRATEGY_REMOVAL_TIME_BASED, HISTORY_CLEANUP_STRATEGY_END_TIME_BASED));
     }
 
     if (HISTORY_CLEANUP_STRATEGY_REMOVAL_TIME_BASED.equals(historyCleanupStrategy) &&
       HISTORY_REMOVAL_TIME_STRATEGY_NONE.equals(historyRemovalTimeStrategy)) {
       throw LOG.invalidPropertyValue("historyRemovalTimeStrategy", String.valueOf(historyRemovalTimeStrategy),
-        String.format("history removal time strategy cannot be set to '%s' in conjunction with '%s' history cleanup strategy", HISTORY_REMOVAL_TIME_STRATEGY_NONE, HISTORY_CLEANUP_STRATEGY_REMOVAL_TIME_BASED));
+        "history removal time strategy cannot be set to '%s' in conjunction with '%s' history cleanup strategy".formatted(HISTORY_REMOVAL_TIME_STRATEGY_NONE, HISTORY_CLEANUP_STRATEGY_REMOVAL_TIME_BASED));
     }
   }
 
@@ -1543,7 +1542,7 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
 
     if (removalTimeUpdateChunkSize > ProcessSetRemovalTimeJobHandler.MAX_CHUNK_SIZE || removalTimeUpdateChunkSize <= 0) {
       throw LOG.invalidPropertyValue("removalTimeUpdateChunkSize", String.valueOf(removalTimeUpdateChunkSize),
-          String.format("value for chunk size should be between 1 and %s", ProcessSetRemovalTimeJobHandler.MAX_CHUNK_SIZE));
+        "value for chunk size should be between 1 and %s".formatted(ProcessSetRemovalTimeJobHandler.MAX_CHUNK_SIZE));
     }
   }
 
@@ -1646,11 +1645,11 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
   }
 
   protected void initService(Object service) {
-    if (service instanceof ServiceImpl) {
-      ((ServiceImpl) service).setCommandExecutor(commandExecutorTxRequired);
+    if (service instanceof ServiceImpl impl) {
+      impl.setCommandExecutor(commandExecutorTxRequired);
     }
-    if (service instanceof RepositoryServiceImpl) {
-      ((RepositoryServiceImpl) service).setDeploymentCharset(getDefaultCharset());
+    if (service instanceof RepositoryServiceImpl impl) {
+      impl.setDeploymentCharset(getDefaultCharset());
     }
   }
 
@@ -1695,9 +1694,9 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
         dataSource = pooledDataSource;
       }
 
-      if (dataSource instanceof PooledDataSource) {
+      if (dataSource instanceof PooledDataSource source) {
         // ACT-233: connection pool of Ibatis is not properely initialized if this is not called!
-        ((PooledDataSource) dataSource).forceCloseAll();
+        source.forceCloseAll();
       }
     }
 
@@ -2653,8 +2652,8 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
 
       if (dmnElProvider != null) {
         dmnEngineConfigurationBuilder.elProvider(dmnElProvider);
-      } else if (expressionManager instanceof ElProviderCompatible) {
-        dmnEngineConfigurationBuilder.elProvider(((ElProviderCompatible)expressionManager).toElProvider());
+      } else if (expressionManager instanceof ElProviderCompatible compatible) {
+        dmnEngineConfigurationBuilder.elProvider(compatible.toElProvider());
       }
 
       dmnEngineConfiguration = dmnEngineConfigurationBuilder.build();
@@ -3949,8 +3948,8 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
   public void addIncidentHandler(IncidentHandler incidentHandler) {
     IncidentHandler existsHandler = incidentHandlers.get(incidentHandler.getIncidentHandlerType());
 
-    if (existsHandler instanceof CompositeIncidentHandler) {
-      ((CompositeIncidentHandler) existsHandler).add(incidentHandler);
+    if (existsHandler instanceof CompositeIncidentHandler handler) {
+      handler.add(incidentHandler);
     } else {
       incidentHandlers.put(incidentHandler.getIncidentHandlerType(), incidentHandler);
     }
@@ -4468,10 +4467,10 @@ public abstract class ProcessEngineConfigurationImpl extends ProcessEngineConfig
 
   public void close() {
     if (forceCloseMybatisConnectionPool
-        && dataSource instanceof PooledDataSource) {
+        && dataSource instanceof PooledDataSource source) {
 
       // ACT-233: connection pool of Ibatis is not properely initialized if this is not called!
-      ((PooledDataSource) dataSource).forceCloseAll();
+      source.forceCloseAll();
     }
   }
 
